k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nycad-app
  labels:
    app.kubernetes.io/name: nycad
    environment: production
